crates/bevy_ecs_compile_fail_tests/tests/ui/query_combin_exact_sized_iterator_safety.stderr
error[E0277]: the trait bound `bevy_ecs::query::Changed<Foo>: ArchetypeFilter` is not satisfied
  --> tests/ui/query_combin_exact_sized_iterator_safety.rs:10:28
   |
10 |     is_exact_size_iterator(query.iter_combinations::<2>());
   |     ---------------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ArchetypeFilter` is not implemented for `bevy_ecs::query::Changed<Foo>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ArchetypeFilter`:
             ()
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
             (F0, F1, F2, F3, F4, F5, F6, F7)
           and 26 others
   = note: required because of the requirements on the impl of `ArchetypeFilter` for `bevy_ecs::query::Or<(bevy_ecs::query::Changed<Foo>, bevy_ecs::query::With<Bar>)>`
   = note: required because of the requirements on the impl of `ExactSizeIterator` for `QueryCombinationIter<'_, '_, &Foo, bevy_ecs::query::Or<(bevy_ecs::query::Changed<Foo>, bevy_ecs::query::With<Bar>)>, 2_usize>`
note: required by a bound in `is_exact_size_iterator`
  --> tests/ui/query_combin_exact_sized_iterator_safety.rs:18:30
   |
18 | fn is_exact_size_iterator<T: ExactSizeIterator>(_iter: T) {}
   |                              ^^^^^^^^^^^^^^^^^ required by this bound in `is_exact_size_iterator`

error[E0277]: the trait bound `bevy_ecs::query::Added<Foo>: ArchetypeFilter` is not satisfied
  --> tests/ui/query_combin_exact_sized_iterator_safety.rs:15:28
   |
15 |     is_exact_size_iterator(query.iter_combinations::<2>());
   |     ---------------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `ArchetypeFilter` is not implemented for `bevy_ecs::query::Added<Foo>`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following other types implement trait `ArchetypeFilter`:
             ()
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
             (F0, F1, F2, F3, F4, F5, F6, F7)
           and 26 others
   = note: required because of the requirements on the impl of `ArchetypeFilter` for `(bevy_ecs::query::Added<Foo>, bevy_ecs::query::Without<Bar>)`
   = note: required because of the requirements on the impl of `ExactSizeIterator` for `QueryCombinationIter<'_, '_, &Foo, (bevy_ecs::query::Added<Foo>, bevy_ecs::query::Without<Bar>), 2_usize>`
note: required by a bound in `is_exact_size_iterator`
  --> tests/ui/query_combin_exact_sized_iterator_safety.rs:18:30
   |
18 | fn is_exact_size_iterator<T: ExactSizeIterator>(_iter: T) {}
   |                              ^^^^^^^^^^^^^^^^^ required by this bound in `is_exact_size_iterator`
